# bootloader-apploader_dcb

./: .cproject  .gitignore  .project  .projectlinkstore  CHANGELOG.md  bootloader-apploader_dcb.pintool  bootloader-apploader_dcb.slcp  bootloader-apploader_dcb.slpb  bootloader-apploader_dcb.slps  target_info.yaml  vscode.conf
.pdm/: uc.module.setup.CommonProjectPostBuild.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
artifact/: bootloader-apploader_dcb-crc.s37  bootloader-apploader_dcb.s37
autogen/: linkerfile.ld  sl_component_catalog.h
autogen/.slc_state/: .crc_config.crc
autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
bootloader-apploader_dcb_cmake/: CMakeLists.txt  CMakePresets.json  bootloader-apploader_dcb.cmake  toolchain.cmake
config/: btl_core_cfg.h  btl_debug_cfg.h  sl_board_control_config.h  sl_rail_util_cs_antenna_offset_config.h
simplicity_sdk_2025.6.1/platform/bootloader/communication/apploader/: btl_apploader_common.c
simplicity_sdk_2025.6.1/platform/bootloader/config/: btl_config.h
simplicity_sdk_2025.6.1/platform/bootloader/core/: btl_bootload.c
simplicity_sdk_2025.6.1/protocol/bluetooth/apploader/inc/: sli_apploader_lib_adaptation.h
simplicity_sdk_2025.6.1/protocol/bluetooth/apploader/src/: sli_apploader_lib_adaptation.c
